# scrape-it-now

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .python-version  .syft.yaml  .version.cache  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  pipeline.yaml
app/: __init__.py  app.py  index.py  scrape.py
app/helpers/: http.py  identity.py  logging.py  monitoring.py  persistence.py  resources.py  threading.py  trie.py
app/models/: indexed.py  message.py  proxy.py  scraped.py  state.py
app/persistence/: azure_ai_search.py  azure_blob_storage.py  azure_queue_storage.py  azure_search.py  iblob.py  iproxy.py  iqueue.py  isearch.py  local_disk.py  monosans_proxy_list.py  no_proxy.py  thespeedx_proxy_list.py
cicd/: Dockerfile  test-unit-ci.sh
src/scrape_it_now/: __init__.py  cli.py  index.py  scrape.py
src/scrape_it_now/helpers/: __init__.py  http.py  identity.py  logging.py  monitoring.py  persistence.py  resources.py  threading.py  trie.py
src/scrape_it_now/models/: scraped.py
src/scrape_it_now/persistence/: azure_blob_storage.py  azure_queue_storage.py  azure_search.py  iblob.py  iqueue.py  local_disk.py
tests/: blob.py  conftest.py  queue.py  resources.py  scrape.py
tests/websites/: azuresdkdocs.html  azuresdkdocs.html.md  google.html  google.html.md  hackernews.html  hackernews.html.md  images.html  links.html  mermaid-export.sh  paragraphs.html  paragraphs.html.md  reflex.html  reflex.html.md
tests/websites/azuresdkdocs/: js  js(1)
tests/websites/google/: base.js  cast_sender(1).js  embed.js  iframe_api  images  images(1)  images(2)  m=IyUeXc  m=_gbm,xUdipf,NwH0H,RMhBfe,w9hDv,VwDzFe,A7fCU  m=attn,cdos,gwc,hsm,jsa,mb4ZUb,d,csi,cEt90b,SNUn3,qddgKe,sTsDMc,dtl0hd,eHDfl  m=attn,cdos,gwc,hsm,jsa,mb4ZUb,d,csi,cEt90b,SNUn3,qddgKe,sTsDMc,dtl0hd,eHDfl(1)  m=iaRXBb  m=kMFpHd,sy96,bm51tf  m=oSegn  m=yb08jf,NoECLb,hypYI,yGkNuf,MnVV2d,sOPgV,qMBFFe,ZfBJ7b  remote.js  rs=AA2YrTuIdtrK2V9fh4hE4HYbZAKg0MPfvA  rs=AA2YrTvCT8ssNxq2zjaaWoo0rjAWQ2vF8A  saved_resource.html  www-embed-player.js  www-player.css  www-widgetapi.js
tests/websites/hackernews/: hn.js  news.css
tests/websites/reflex/: 175675d1-4cbff655deab3d46.js  19066-2bf2fc1e9f12fbab.js  23919-9967975c11bd08e1.js  33005-35d8e1cf07237749.js  3592032a07e32c56.css  44008-cfb8671c0bbb30f2.js  46608-022adddb6a78e5ba.js  47955-f199b79d200d6ca1.js  5307-036858eb63f42352.js  53267-fdbdc17f4b3d29cb.js  62029-0df7f41e4311f685.js  73858-b02704b6f38b398d.js  87453-55855c043068dbc8.js  90477-3647fe7e5759cad0.js  94210-6a9e73634cfb9800.js  _app-c5c9f40c80135230.js  _buildManifest.js  app-528fad013178855a.js  array.js  blog-6d4e4db944763adf.js  deploy-quick-start-302941de492f7c66.js  exception-handlers-daefcbc066a5cb82.js  f87fff2ab93d05a7.css  framework-2ac3ce78c144388a.js  gallery-987ae9bafee2b6bf.js  index-28b80f82cb14d936.js  introduction-76f7add7de66c685.js  js  library-5701e6f7cd814669.js  main-d7bcef5db986c4ba.js  overview-575eea889922fb75.js  overview-8bfd1564b8833ab8.js  recipes-overview-f710bbe6bcf99ea5.js  recorder.js  tags.js  tracking.min.js  webpack-00a18a5a4b10ce49.js
