[project]
description = "A website to scrape? There's a simple way."
dynamic = ["version"]
license = {file = "LICENSE"}
name = "scrape-it-now"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiofiles==24.1.0",
  "aiohttp==3.10.2",
  "aiosqlite==0.20.0",
  "azure-monitor-opentelemetry==1.6.1",
  "azure-search-documents==11.6.0b4",
  "azure-storage-blob==12.22.0",
  "azure-storage-queue==12.11.0",
  "click==8.1.7",
  "html2text==2024.2.26",
  "openai==1.42.0",
  "opentelemetry-instrumentation-aiohttp-client==0.47b0",
  "opentelemetry-instrumentation-httpx==0.47b0",
  "opentelemetry-instrumentation-openai==0.27.0",
  "opentelemetry-instrumentation-redis==0.47b0",
  "opentelemetry-instrumentation-sqlite3==0.47b0",
  "playwright==1.46.0",
  "pydantic==2.8.2",
  "python-dotenv==1.0.1",
  "tenacity==9.0.0",
  "tiktoken==0.7.0",
]

[project.optional-dependencies]
dev = [
  "deptry==0.19.1",  # Dependency tree testing
  "pip-tools==7.4.1",  # Compile requirements.txt from pyproject.toml
  "pyinstaller==6.10.0",
  "pyright==1.1.377",  # Static type checker
  "pytest-asyncio==0.23.7",  # Pytest plugin for async tests
  "pytest-repeat==0.9.3",  # Pytest plugin for repeating tests
  "pytest-xdist[psutil]==3.6.1",  # Pytest plugin for parallel testing
  "pytest==8.3.2",  # Testing framework
  "ruff==0.6.2",  # Linter
]

[project.scripts]
scrape-it-now = "app.app:cli"

[tool.setuptools]
py-modules = [
  "app",
]

[tool.pip-tools]
generate-hashes = true
strip-extras = true

[tool.deptry]
ignore_notebooks = true
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "aiohttp",  # Async HTTP client for Azure SDKs
]
DEP003 = [
  "certifi",  # Patch for CA certificates when built with PyInstaller
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyright]
pythonVersion = "3.12"
